--- a/src/formularios/frmBitacoras.form
+++ b/src/formularios/frmBitacoras.form
@@ -335,11 +335,11 @@
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Tahoma" size="12" style="1"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="Buscar por Login:"/>
+        <Property name="text" type="java.lang.String" value="USUARIO:"/>
       </Properties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="230" y="180" width="-1" height="30"/>
+          <AbsoluteConstraints x="250" y="180" width="-1" height="30"/>
         </Constraint>
       </Constraints>
     </Component>
@@ -359,10 +359,10 @@
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
               <Table columnCount="4" rowCount="0">
-                <Column editable="false" title="N&#xb0;" type="java.lang.Object"/>
-                <Column editable="false" title="Usuario" type="java.lang.Object"/>
-                <Column editable="false" title="Descripci&#xf3;n" type="java.lang.Object"/>
-                <Column editable="false" title="Fecha" type="java.lang.Object"/>
+                <Column editable="false" title="ID USUARIO" type="java.lang.Object"/>
+                <Column editable="false" title="USUARIO" type="java.lang.Object"/>
+                <Column editable="false" title="FECHA" type="java.lang.Object"/>
+                <Column editable="false" title="ACCION" type="java.lang.Object"/>
               </Table>
             </Property>
             <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
@@ -377,12 +377,12 @@
                   <Editor/>
                   <Renderer/>
                 </Column>
-                <Column maxWidth="-1" minWidth="-1" prefWidth="400" resizable="true">
+                <Column maxWidth="-1" minWidth="-1" prefWidth="75" resizable="false">
                   <Title/>
                   <Editor/>
                   <Renderer/>
                 </Column>
-                <Column maxWidth="-1" minWidth="-1" prefWidth="75" resizable="true">
+                <Column maxWidth="-1" minWidth="-1" prefWidth="400" resizable="false">
                   <Title/>
                   <Editor/>
                   <Renderer/>
@@ -390,7 +390,7 @@
               </TableColumnModel>
             </Property>
             <Property name="tableHeader" type="javax.swing.table.JTableHeader" editor="org.netbeans.modules.form.editors2.JTableHeaderEditor">
-              <TableHeader reorderingAllowed="false" resizingAllowed="true"/>
+              <TableHeader reorderingAllowed="true" resizingAllowed="true"/>
             </Property>
           </Properties>
         </Component>
@@ -910,7 +910,7 @@
       </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="370" y="180" width="180" height="30"/>
+          <AbsoluteConstraints x="340" y="180" width="180" height="30"/>
         </Constraint>
       </Constraints>
     </Component>
